Left menu and footer align problem in dashboard fix.

--- a/app/css/hts_style.css
+++ b/app/css/hts_style.css
@@ -77,6 +77,10 @@ table.table-condensed {
   color: rgb(56, 142, 62);
 }
 
+#menu_left {
+  margin: 0;
+}
+
 #menu_left > a.list-group-item {
   border-radius: 0;
 }
